# duumbi-registry

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
src/: error.rs  lib.rs  main.rs  types.rs
src/api/: mod.rs
src/auth/: device_code.rs  jwt.rs  mod.rs  oauth.rs  password.rs  rate_limit.rs  session.rs
src/db/: mod.rs
src/storage/: mod.rs
src/web/: auth_routes.rs  mod.rs  settings.rs
templates/: base.html  device.html  device_success.html  index.html  login.html  module.html  publish.html  register.html  search.html  settings_tokens.html  style.css  token_created.html  version.html
tests/: e2e.rs
