[package]
name = "duumbi-registry"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Registry server for duumbi modules"
repository = "https://github.com/hgahub/duumbi-registry"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Crypto
sha2 = "0.10"

# Auth
jsonwebtoken = "9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Templating
askama = "0.13"

# Misc
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
hex = "0.4"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.13", features = ["json"] }
